--- a/style.css
+++ b/style.css
@@ -22,6 +22,11 @@
   margin-top: 5px;
 }
 
+.copyright {
+  font-size: 14px;
+  margin-top: 5px;
+}
+
 .main-border {
   border-bottom: 1px solid #fcba28;
 }
